src/test/compile-fail/main-wrong-type.rs
fn main(foo: {x: int, y: int}) {
//~^ ERROR Wrong type in main function: found `fn({x: int,y: int})`
}
